tests/compile_fail/bad_pf_interp.olrn
fn main() -> void
{
    @pf("bad {1 +}\n")
}
